--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -6,3 +6,143 @@
 </div>
 
 <!-- Content Row -->
+<div class="card shadow mb-4">
+    <div *ngIf="isShown">
+        <div class="card-header py-3">
+            <h5 class="m-0 font-weight-bold text-primary"> Project List </h5>
+        </div>
+        <div class="card-body">
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-lg-3">
+                    <select class="form-select " ngbDropdown="selectedMonth">
+                        <option value="1">--Select Month--</option>
+                        <option *ngFor="let month of months" [value]="month">{{ months }}</option>
+                    </select>
+                </div>
+
+
+
+
+                <div class="col-lg-3">
+                    <select class="form-select " ngbDropdown="selectedYear">
+                            <option value="1">--Select Year--</option>
+                            <option *ngFor="let year of years"  [value]="year">{{year}}</option>
+                        </select>
+
+                </div>
+
+                <div class="col-lg-6">
+                    <button class="btn btn-success" (click)="addPayment()" style="float:right">Add
+                        Payment</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col">Project Name</th>
+                                <th scope="col">Amount</th>
+                                <th scope="col">Month/Year</th>
+                                <th scope="col">Payment Date</th>
+                                <th style="text-align: center;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let payment of paymentlist">
+
+                                <td>
+                                    {{payment.name}}
+                                </td>
+                                <td>
+                                    {{payment.amount}}
+                                </td>
+                                <td>
+                                    {{ payment.month}}
+                                </td>
+                                <td>
+                                    {{ payment.date}}
+                                </td>
+                                <td style="text-align: center;">
+                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Edit">
+                                        <fa-icon [icon]="faEdit"></fa-icon>
+                                    </a>
+                                    <a href="javascript:void(0)" style="margin-right: 10px;" ngbTooltip="Delete">
+                                        <fa-icon [icon]="faDelete"></fa-icon>
+                                    </a>
+                                </td>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div *ngIf="!isShown">
+    <div class="card-header py-3">
+        <h5 class="m-0 font-weight-bold text-primary">Add Project Payment</h5>
+    </div>
+    <!-- Card Body -->
+    <div class="card-body">
+        <form class="form-horizontal">
+
+            <div class="row">
+                <div class="form-group col-lg-6">
+                    <label for="project">Project</label>
+                    <select class="form-select " aria-label="aria-label">
+                        <option selected> Select Project</option>
+                        <option value='1'>Project Breeze</option>
+                        <option value='2'>Dynamic Program</option>
+                        <option value='3'>Magnetic Program</option>
+                        <option value='4'>Project Signal</option>
+                    </select>
+                </div>
+
+                <div class="form-group col-lg-6">
+                    <label for="amount">Amount</label>
+                    <input type="text" class="form-control" id="amount" placeholder="Amount">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-lg-6">
+                    <label for="Month">Month:</label>
+                   <select class="form-select " ngbDropdown="selectedMonth">
+                        <option value="1">--Select Month--</option>
+                        <option *ngFor="let month of months" [value]="month">{{ month }}</option>
+                    </select>
+                </div>
+
+                <div class="form-group col-lg-6">
+                    <label for="year">Year </label>
+                    <select class="form-select " ngbDropdown="selectedYear">
+                        <option value="">--Select Year--</option>
+                        <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group col-lg-6">
+                <label for="paymentDate">Payment Date </label>
+                <div class="input-group">
+                    <input class="form-control" placeholder="dd-mm-yyyy" name="dp" ngbDatepicker #d="ngbDatepicker"
+                        id="date">
+                    <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-lg-12">
+                    <input type="button" *ngIf="isAddNew" class="btn btn-success" value="Save"
+                        style="margin-right: 10px; width:100px;" />
+
+                    <input type="button" class="btn btn-outline-primary" value="Cancel" style="width:100px;"
+                        (click)="isShown = true" />
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
