--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -77,14 +77,15 @@
                 <div class="row">
                     <div class="form-group col-lg-6">
                         <label for="description">Designation</label>
-                        <select name="description" class="form-select col-lg-12" (change)="onChange($event.target)">
+                        <select name="description" class="form-select col-lg-12"
+                            (change)="onDesignationChange($event.target)">
                             <option *ngFor="let designation of designations" [value]="designation.id">
                                 {{designation.name}}</option>
                         </select>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="gender">Gender</label>
-                        <select name="gender" class="form-select col-lg-12" (change)="onChange($event.target)">
+                        <select name="gender" class="form-select col-lg-12" (change)="onGenderChange($event.target)">
                             <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
                         </select>
                     </div>
