--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -61,15 +61,20 @@
         <div class="card-body">
             <form class="form-horizontal">
                 <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label for="firstName">First Name</label>
-                        <input class="form-control" type="text" id="firstName" placeholder="FirstName"
-                            autocomplete="off">
+                        <input class="form-control" type="text" id="firstName" placeholder="First Name"
+                            autocomplete="off" maxlength="100">
                     </div>
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
+                        <label for="middleName">Middle Name</label>
+                        <input class="form-control" type="text" id="middleName" placeholder="Middle Name"
+                            autocomplete="off" maxlength="100">
+                    </div>
+                    <div class="form-group col-lg-4">
                         <label for="lastNname">Last Name</label>
-                        <input class="form-control" type="text" id="lastNname" placeholder="LastName"
-                            autocomplete="off">
+                        <input class="form-control" type="text" id="lastNname" placeholder="Last Name"
+                            autocomplete="off" maxlength="100">
                     </div>
                 </div>
 
