--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -75,7 +75,7 @@
                     <div class="form-group col-lg-6">
                         <label for="projectName">Project Name </label>
                         <input type="text" class="form-control" id="projectName" placeholder="Project Name"
-                            autocomplete="off">
+                            autocomplete="off" maxlength="100">
                     </div>
 
                     <div class="form-group col-lg-6">
@@ -114,7 +114,7 @@
                     <div class="form-group col-lg-6">
                         <label for="Cost">Cost </label>
                         <input type="text" class="form-control" id="txtDescription" placeholder="Cost"
-                            autocomplete="off">
+                            autocomplete="off" mask="000000">
                     </div>
 
                     <div class="form-group col-lg-6">
