--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -17,7 +17,7 @@
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-lg-12">
                     <button class="btn btn-primary btn-sm" (click)="addProject()" style="float:right">Add
-                        New</button>
+                        Project</button>
                 </div>
             </div>
             <div class="row">
