--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -100,12 +100,12 @@
 
                     <div class="form-group col-lg-4">
                         <label for="recieved amount">Recieved Amount </label>
-                        <input class="form-control" type="text" id="amount" placeholder="Amount" mask="000000"
+                        <input class="form-control" type="text" id="recievedamount" placeholder=" Recieved Amount" mask="000000"
                             autocomplete="off">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for=" balanced amount"> Balanced Amount </label>
-                        <input class="form-control" type="text" id="amount" placeholder="Amount" mask="000000"
+                        <input class="form-control" type="text" id="balancedamount" placeholder=" Balanced Amount" mask="000000"
                             autocomplete="off">
                     </div>
                 </div>
