--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -83,21 +83,13 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="amount">Amount</label>
-                        <input class="form-control" type="text" id="amount" placeholder="Amount" mask="00,00,000"
+                        <input class="form-control" type="text" id="amount" placeholder="Amount" mask="000000"
                             autocomplete="off">
                     </div>
                 </div>
 
 
                 <div class="row">
-                    <div class="form-group col-lg-4">
-                        <label for="month">Month</label>
-                        <select name="month" class="form-select col-lg-12" (change)="onChange($event.target)">
-                            <option *ngFor="let month of months" [value]="month.id">{{month.name}} </option>
-                        </select>
-
-                    </div>
-
                     <div class="form-group col-lg-4">
                         <label for="year">Year</label>
                         <select name="year" class="form-select col-lg-12" (change)="onChange($event.target)">
@@ -106,7 +98,14 @@
                     </div>
 
                     <div class="form-group col-lg-4">
-                        <label for="ngbDatepicker">Payment Date</label>
+                        <label for="month">Month</label>
+                        <select name="month" class="form-select col-lg-12" (change)="onChange($event.target)">
+                            <option *ngFor="let month of months" [value]="month.id">{{month.name}} </option>
+                        </select>
+                    </div>
+
+                    <div class="form-group col-lg-4">
+                        <label for="paymentdate">Payment Date</label>
                         <div class="input-group">
                             <input class="form-control" placeholder="MM/DD/YYYY" name="dp" ngbDatepicker
                                 #d="ngbDatepicker" mask="00/00/0000" autocomplete="off">
