--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -1,7 +1,7 @@
 <script>
-    $(document).ready(function() {
-  $('#dataTable').DataTable();
-});
+    $(document).ready(function () {
+        $('#dataTable').DataTable();
+    });
 </script>
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <table datatable [dtOptions]="dtOptions"  class="row-border hover">
+                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Name</th>
@@ -69,8 +69,8 @@
                     <div class="form-group col-lg-4">
                         <label for="firstName">First Name*</label>
                         <input class="form-control" type="text" id="firstName" placeholder="First Name"
-                            autocomplete="off" maxlength="100" formControlName="firstName" 
-                            [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">                        
+                            autocomplete="off" maxlength="100" formControlName="firstName"
+                            [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="middleName">Middle Name</label>
@@ -80,7 +80,8 @@
                     <div class="form-group col-lg-4">
                         <label for="lastNname">Last Name*</label>
                         <input class="form-control" type="text" id="lastNname" placeholder="Last Name"
-                            autocomplete="off" maxlength="100" [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
+                            autocomplete="off" maxlength="100"
+                            [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
                     </div>
                 </div>
                 <div class="row">
@@ -112,12 +113,14 @@
                     <div class="form-group col-lg-6">
                         <label for="emailAddress">Email Address*</label>
                         <input class="form-control" type="text" id="emailAddress" placeholder="Email Address"
-                            autocomplete="off" maxlength="100" [ngClass]="{ 'is-invalid': submitted && f['emailAddress'].errors }">
+                            autocomplete="off" maxlength="100"
+                            [ngClass]="{ 'is-invalid': submitted && f['emailAddress'].errors }">
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="mobile">Mobile*</label>
                         <input class="form-control" type="text" id="mobile" placeholder="(XXX) XXX XXXX"
-                            mask="(000) 000 0000" autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f['mobile'].errors }">
+                            mask="(000) 000 0000" autocomplete="off"
+                            [ngClass]="{ 'is-invalid': submitted && f['mobile'].errors }">
                     </div>
                 </div>
                 <div class="row">
@@ -148,7 +151,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label for="startDate">Start Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
@@ -157,7 +160,7 @@
                                 type="button"></button>
                         </div>
                     </div>
-                    <div class="form-group col-lg-6">
+                    <div class="form-group col-lg-4">
                         <label for="endDate">End Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
@@ -166,7 +169,15 @@
                                 type="button"></button>
                         </div>
                     </div>
+                    <div class="form-group col-lg-4">
+                        <label for="status">Status </label>
+                        <select name="status" class="form-select col-lg-12" (change)="onStatusChange($event.target)">
+                            <option *ngFor="let status of status" [value]="status.id">{{status.name}}
+                            </option>
+                        </select>
+                    </div>
                 </div>
+
                 <div class="row submit-buttons">
                     <div class="form-group col-lg-12">
                         <input type="submit" class="btn btn-success" value="Save" />
