--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -75,31 +75,32 @@
                             autocomplete="off" maxlength="100" formControlName="firstName"
                             [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
                     </div>
+                    
                     <div class="form-group col-lg-4">
                         <label for="middleName">Middle Name</label>
                         <input class="form-control" type="text" id="middleName" placeholder="Middle Name"
-                            autocomplete="off" maxlength="100">
+                            autocomplete="off" maxlength="100" formControlName="middleName">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="lastNname">Last Name*</label>
-                        <input class="form-control" type="text" id="lastNname" placeholder="Last Name"
-                            autocomplete="off" maxlength="100">
+                        <input class="form-control" type="text" id="lastName" placeholder="Last Name"
+                            autocomplete="off" maxlength="100" formControlName="lastName">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="gender">Gender</label>
-                        <select name="gender" class="form-select col-lg-12" (change)="onGenderChange($event.target)">
+                        <select name="gender" class="form-select col-lg-12" (change)="onGenderChange($event.target)" formControlName="gender">
                             <option value="0">--Select Gender--</option>
                             <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
                         </select>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="dob">Date of Birth</label>
-                        <div class="input-group">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
-                                mask="00/00/0000" [maxDate]="today"
-                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                        <div class="input-group" formControlName="dateOfBirth">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control"  bsDatepicker
+                                mask="00/00/0000"  [maxDate]="today"
+                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false,  containerClass: 'theme-dark-blue'}" >
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
@@ -116,31 +117,31 @@
                     <div class="form-group col-lg-6">
                         <label for="emailAddress">Email Address*</label>
                         <input class="form-control" type="text" id="emailAddress" placeholder="Email Address"
-                            autocomplete="off" maxlength="100">
+                            autocomplete="off" maxlength="100" formControlName="emailAddress">
                     </div>
                     <div class="form-group col-lg-6">
                         <label for="mobile">Mobile*</label>
                         <input class="form-control" type="text" id="mobile" placeholder="(XXX) XXX XXXX"
-                            mask="(000) 000 0000" autocomplete="off">
+                            mask="(000) 000 0000" autocomplete="off" formControlName="mobile">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-12">
                         <label for="address">Address</label>
                         <textarea type="text" name="address" placeholder="Address" class="form-control "
-                            autocomplete="off" maxlength="200"></textarea>
+                            autocomplete="off" maxlength="200" formControlName="address"></textarea>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="city">City</label>
                         <input class="form-control" type="text" id="city" placeholder="City" autocomplete="off"
-                            maxlength="50">
+                            maxlength="50"formControlName="city">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="state">State</label>
                         <select name="state" class="form-select col-lg-12"
-                            (change)="onDesignationChange($event.target)">
+                            (change)="onDesignationChange($event.target)"formControlName="stateId">
                             <option value="0">--Select State--</option>
                             <option *ngFor="let state of states" [value]="state.id">
                                 {{state.name}}</option>
@@ -149,21 +150,21 @@
                     <div class="form-group col-lg-4">
                         <label for="pincode">Pin Code</label>
                         <input class="form-control" type="text" id="pincode" placeholder="XXXXXX" mask="000000"
-                            autocomplete="off">
+                            autocomplete="off" formControlName="postalCode">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="startDate">Start Date </label>
-                        <div class="input-group">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                        <div class="input-group" formControlName="startDate">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control"  bsDatepicker
                                 mask="00/00/0000" [maxDate]="today"
                                 [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="endDate">End Date </label>
-                        <div class="input-group">
+                        <div class="input-group" formControlName="endDate">
                             <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
                                 mask="00/00/0000" [maxDate]="today"
                                 [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
