--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -75,7 +75,7 @@
                             autocomplete="off" maxlength="100" formControlName="firstName"
                             [ngClass]="{ 'is-invalid': submitted && f['firstName'].errors }">
                     </div>
-                    
+
                     <div class="form-group col-lg-4">
                         <label for="middleName">Middle Name</label>
                         <input class="form-control" type="text" id="middleName" placeholder="Middle Name"
@@ -83,30 +83,35 @@
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="lastNname">Last Name*</label>
-                        <input class="form-control" type="text" id="lastName" placeholder="Last Name"
-                            autocomplete="off" maxlength="100" formControlName="lastName">
+                        <input class="form-control" type="text" id="lastName" placeholder="Last Name" autocomplete="off"
+                            maxlength="100" formControlName="lastName"
+                            [ngClass]="{ 'is-invalid': submitted && f['lastName'].errors }">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="gender">Gender</label>
-                        <select name="gender" class="form-select col-lg-12" (change)="onGenderChange($event.target)" formControlName="gender">
+                        <select name="gender" class="form-select col-lg-12" formControlName="gender">
                             <option value="0">--Select Gender--</option>
                             <option *ngFor="let gender of genders" [value]="gender.id">{{gender.name}}</option>
                         </select>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="dob">Date of Birth</label>
-                        <div class="input-group" formControlName="dateOfBirth">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control"  bsDatepicker
-                                mask="00/00/0000"  [maxDate]="today"
-                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false,  containerClass: 'theme-dark-blue'}" >
+                        <div class="input-group">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                                [maxDate]="today" formControlName="dateOfBirth" #dob="bsDatepicker" readonly
+                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false,  containerClass: 'theme-dark-blue'}">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="button" (click)="dob.toggle()">
+                                        <fa-icon [icon]="faCalendar"></fa-icon>
+                                    </button>
+                                </div>
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="description">Designation</label>
-                        <select name="description" class="form-select col-lg-12"
-                            (change)="onDesignationChange($event.target)">
+                        <select name="description" class="form-select col-lg-12">
                             <option value="0">-- Select Designation --</option>
                             <option *ngFor="let designation of designations" [value]="designation.id">
                                 {{designation.name}}</option>
@@ -136,12 +141,11 @@
                     <div class="form-group col-lg-4">
                         <label for="city">City</label>
                         <input class="form-control" type="text" id="city" placeholder="City" autocomplete="off"
-                            maxlength="50"formControlName="city">
+                            maxlength="50" formControlName="city">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="state">State</label>
-                        <select name="state" class="form-select col-lg-12"
-                            (change)="onDesignationChange($event.target)"formControlName="stateId">
+                        <select name="state" class="form-select col-lg-12" formControlName="stateId">
                             <option value="0">--Select State--</option>
                             <option *ngFor="let state of states" [value]="state.id">
                                 {{state.name}}</option>
@@ -156,23 +160,33 @@
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="startDate">Start Date </label>
-                        <div class="input-group" formControlName="startDate">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control"  bsDatepicker
-                                mask="00/00/0000" [maxDate]="today"
+                        <div class="input-group">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                            formControlName="startDate" [maxDate]="today" #sd="bsDatepicker" readonly
                                 [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="button" (click)="sd.toggle()">
+                                        <fa-icon [icon]="faCalendar"></fa-icon>
+                                    </button>
+                                </div>
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="endDate">End Date </label>
-                        <div class="input-group" formControlName="endDate">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
-                                mask="00/00/0000" [maxDate]="today"
-                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                        <div class="input-group">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" formControlName="endDate" bsDatepicker
+                                [maxDate]="today" #ed="bsDatepicker" readonly
+                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers: false, containerClass: 'theme-dark-blue'}">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button" (click)="ed.toggle()">
+                                    <fa-icon [icon]="faCalendar"></fa-icon>
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="status">Status </label>
-                        <select name="status" class="form-select col-lg-12" (change)="onStatusChange($event.target)">
+                        <select name="status" class="form-select col-lg-12">
                             <option value="0">-- Select Status --</option>
                             <option *ngFor="let status of status" [value]="status.id">{{status.name}}
                             </option>
